[project]
name = "stop-azs"
version = "0.1.0"
description = "Utilities for building regulatory submission packages"
authors = [
  { name = "stopazus" }
]
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
